k8s-manifests/gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
  labels:
    name: gateway
    app.kubernetes.io/name: gateway
    app.kubernetes.io/component: namespace
